# vishwakarma

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  ecs update-service --cluster vishwakarma-cluster --service vishwakarma-api-service --force-new-deployment --region ap-south-1  ecs update-service --cluster vishwakarma-cluster --service vishwakarma-api-service --task-definition vishwakarma-api  get_mia.py  main.py  pyproject.toml  scaffold.sh  task-definition.json
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 35c76037ae5e_add_hashed_password_to_users.py  5656ed87d564_initial_tables.py  6c1820772ff1_add_interview_history.py
app/: config.py  main.py
app/agents/: ats_checker.py  cgpa_context.py  cover_letter.py  graph.py  job_matcher.py  market_intel.py  mock_interview.py  quiz.py  resume_builder.py  resume_parser.py  roadmap.py  skill_gap.py  state.py
app/api/routes/: analysis.py  auth.py  history.py  interview.py  (+8 more)
app/db/: session.py
app/models/: analysis.py  interview.py  job.py  resume.py  tracker.py
app/services/: did.py  notifications.py  s3.py  scraper.py  tts.py
app/utils/: gemini.py  groq_client.py  logger.py
app/workers/: celery_app.py  tasks.py
frontend/: next.config.ts  package-lock.json  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ATSCard.tsx  BottomNav.tsx  CGPACard.tsx  GapsCard.tsx  GlobalBackgrounds.tsx  JobMatchCard.tsx  ResumeCard.tsx  RoadmapCard.tsx
frontend/lib/: api.ts  auth.ts
frontend/public/: generate-icons.mjs  manifest.json
(+16 files in other folders)
