[project]
name = "vishwakarma"
version = "0.1.0"
description = "AI-native career intelligence platform"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "anthropic>=0.28.0",
    "langgraph>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "pgvector>=0.2.5",
    "alembic>=1.13.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "pdfplumber>=0.10.0",
    "python-docx>=1.1.0",
    "crawl4ai>=0.3.0",
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "psycopg2-binary>=2.9.11",
    "groq>=1.1.1",
    "deepgram-sdk>=6.0.1",
    "bcrypt>=5.0.0",
    "pyjwt>=2.12.1",
    "websockets>=16.0",
    "google-genai>=1.68.0",
    "twilio>=9.10.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["app"]
